# Helix

./: .env.example  .env.production.example  .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  deploy-gcp-supabase.sh  deploy-gcp.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redis_mock.py  vercel.json
apps/api/: Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements.txt  test_checkpointer.py  test_saver.py  test_saver_pool.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_perf_and_reliability.py  0003_skill_specialization.py  0004_workflow_run_alignment.py  0005_asset_task_alignment.py  0006_workflow_id_nullable.py  0007_billing.py  0008_session_job_runtime.py  0009_intelligence_layer.py  0010_browser_automation.py  0011_signal_processed.py  0012_media_generation.py  0013_experiment_stats.py  0014_enterprise.py  0015_multivariate_factors.py  0016_user_api_keys_and_usage.py
apps/api/helix/: __init__.py  main.py  workers
apps/api/helix/agents/: __init__.py  base.py  bootstrap.py  brand_strategist.py  copywriter.py  creative_director.py  critic.py  executive_council.py  launch_manager.py  loop.py  menu_designer.py  orchestrator.py  packaging_designer.py  social_producer.py  swarm.py  visual_designer.py  web_builder.py
apps/api/helix/core/: __init__.py  acl.py  billing.py  cache.py  config.py  db.py  langfuse_client.py  logging.py  metrics.py  observability.py  rate_limiter.py  redis.py  security.py  sessions.py  storage.py  watcher.py
apps/api/helix/critics/: __init__.py  clip_scorer.py  contrast_a11y.py  ensemble.py  palette_scorer.py  (+1 more)
apps/api/scratch/: generate_extended_skills.py  test_browser_automation.py  test_event_bus.py  test_executive_council.py  test_hermes_imports.py
apps/api/scripts/: export_openapi.py  seed_intelligence.py  test_optimization.py
(+372 files in other folders)
